# Data-Structures

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
docs/Implementation Details/: implementatio_details.drawio  user_interface.drawio
docs/User Interface/: user_interface.drawio
examples/: main.cpp
examples/doublyLinkedList/: main.cpp
examples/linkedList/: main.cpp
examples/linkedList/doublyLinkedList/: main.cpp
examples/linkedList/singlyLinkedList/: main.cpp
examples/priorityQueue/: main.cpp
examples/queue/: main.cpp
examples/singlyLinkedList/: main.cpp
examples/stack/: main.cpp
examples/unorderedSet/: main.cpp
include/: sequenceContainer.hpp
include/container/: container.hpp
include/container/linkedList/: LinkedList.hpp
include/container/linkedList/doublyLinkedList/: doublyLinkedList.hpp  doublyLinkedList.tpp  doublyLinkedListIterator.hpp  doublyLinkedListNode.hpp
include/container/linkedList/singlyLinkedList/: singlyLinkedList.hpp  singlyLinkedList.tpp  singlyLinkedListIterator.hpp
include/container/orderedSet/: orderedSet.hpp  orderedSetIterator.hpp
include/container/priorityQueue/: abstractPriorityQueue.hpp  priorityQueue.hpp  priorityQueue.tpp  priorityQueueIterator.hpp
include/container/queue/: queue.hpp  queue.tpp
include/container/stack/: stack.hpp  stack.tpp
include/container/unorderedSet/: unorderedSet.hpp  unorderedSet.tpp
include/doublyLinkedList/: doublyLinkedList.hpp  listIterator.hpp  listNode.hpp
include/linkedList/: LinkedList.hpp  listIterator.hpp  listNode.hpp
include/linkedList/doublyLinkedList/: doublyLinkedList.hpp  doublyLinkedList.tpp  doublyLinkedListIterator.hpp  doublyLinkedListNode.hpp  listIterator.hpp
include/linkedList/singlyLinkedList/: singlyLinkedList.hpp  singlyLinkedListIterator.hpp  singlyLinkedListNode.hpp
include/priorityQueue/: abstractPriorityQueue.hpp  priorityQueue.hpp  priorityQueue.tpp  priorityQueueNode.hpp
include/sequenceContainer/: sequenceContainer.hpp
include/sequenceContainer/linkedList/doublyLinkedList/: doublyLinkedList.hpp  doublyLinkedList.tpp  doublyLinkedListIterator.hpp  doublyLinkedListNode.hpp
include/sequenceContainer/linkedList/singlyLinkedList/: singlyLinkedList.tpp  singlyLinkedListIterator.hpp
include/sequenceContainer/queue/: queue.hpp  queue.tpp
include/singlyLinkedList/: listNode.hpp  singlyLinkedList.hpp  singlyLinkedList.ipp  singlyLinkedListInterface.hpp
src/: CMakeLists.txt  main.cpp
src/doublyLinkedList/: doublyLinkedList.tpp
src/linkedList/doublyLinkedList/: doublyLinkedList.tpp
src/linkedList/singlyLinkedList/: singlyLinkedList.tpp
src/priorityQueue/: priorityQueue.tpp  priorityQueueNode.cpp  priorityQueueNode.tpp
src/singlyLinkedList/: listNode.cpp  singlyLinkedList.cpp  singlyLinkedList.tpp
tests/linkedList/: doublyLinkedList_speedtest.cpp  doublyLinkedList_test.cpp  singlyLinkedList_test.cpp
tests/priorityQueue/: priorityQueue_speedtest.cpp  priorityQueue_test.cpp
tests/queue/: queue_test.cpp
tests/stack/: stack_speedtest.cpp  stack_test.cpp
